@@ -54,7 +54,8 @@ setup(name='zope.app.testing',
       packages=find_packages('src'),
       package_dir = {'': 'src'},
       namespace_packages=['zope', 'zope.app'],
-      extras_require=dict(test=['zope.app.zptpage',
+      extras_require=dict(test=['zope.app.authentication',
+                                'zope.app.zptpage',
                                 'zope.app.securitypolicy',
                                 'zope.app.zcmlfiles',
                                 'ZODB3',
@@ -63,7 +64,6 @@ setup(name='zope.app.testing',
       install_requires=['setuptools',
                         'zope.annotation',
                         'zope.app.appsetup >=3.5.0',
-                        'zope.app.authentication',
                         'zope.app.component',
                         'zope.app.debug',
                         'zope.app.dependable',
@@ -74,6 +74,7 @@ setup(name='zope.app.testing',
                         'zope.i18n',
                         'zope.interface',
                         'zope.location',
+                        'zope.password',
                         'zope.publisher',
                         'zope.schema',
                         'zope.security',
