@@ -19,28 +19,25 @@ from zope.schema.vocabulary import setVocabularyRegistry
 from zope.component.testing import PlacelessSetup as CAPlacelessSetup
 from zope.component.eventtesting import PlacelessSetup as EventPlacelessSetup
 from zope.i18n.testing import PlacelessSetup as I18nPlacelessSetup
+from zope.password.testing import setUpPasswordManagers
 from zope.traversing.browser.interfaces import IAbsoluteURL
 from zope.traversing.browser.absoluteurl import AbsoluteURL
 
 from zope.app.testing import ztapi
-from zope.container.testing \
-    import PlacelessSetup as ContainerPlacelessSetup
-from zope.app.authentication.placelesssetup \
-    import PlacelessSetup as AuthenticationPlacelessSetup
+from zope.container.testing import PlacelessSetup as ContainerPlacelessSetup
 
 class PlacelessSetup(CAPlacelessSetup,
                      EventPlacelessSetup,
                      I18nPlacelessSetup,
-                     ContainerPlacelessSetup,
-                     AuthenticationPlacelessSetup):
+                     ContainerPlacelessSetup):
 
     def setUp(self, doctesttest=None):
         CAPlacelessSetup.setUp(self)
         EventPlacelessSetup.setUp(self)
         ContainerPlacelessSetup.setUp(self)
         I18nPlacelessSetup.setUp(self)
-        AuthenticationPlacelessSetup.setUp(self)
 
+        setUpPasswordManagers()
         ztapi.browserView(None, 'absolute_url', AbsoluteURL)
         ztapi.browserViewProviding(None, AbsoluteURL, IAbsoluteURL)
 
